Fixed media icons display and sizing Fixed second navbar items alignments Removed repeated css styles

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
   .bottomNav {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-left: 8px;
     list-style: none;
     
@@ -157,10 +158,11 @@ body {
   .bottomNav li {
     margin: 18px 12px 0;
     list-style: none;
+    margin-bottom: 20px;
   }
   
   .bottomNav li a:hover {
-    color: #555;
+    color: #234;
   }
   
   .bottomNav button {
@@ -171,7 +173,8 @@ body {
   }
   
   .search-icon {
-    display: inline-block;
+   float: left;
+    margin-right: 100px;
     width: 16px;
     height: 16px;
     background: url('https://cdn0.tnwcdn.com/wp-content/themes/cyberdelia/assets/img/icons-sprite.svg?1520429355783') -832px -832px;
@@ -353,7 +356,7 @@ body {
   
   .index-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4 1fr);
     grid-gap: 0 24px;
     margin: 0 0 56px;
   }
@@ -623,13 +626,24 @@ body {
   }
   
   .footer-icons {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background: #333;
-    padding: 10px;
+    padding: 5px;
     border: 2px solid #333;
     border-radius: 50%;
     margin-right: 15px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  .footer-icons i{
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    
   }
   
   .footer-icons:hover {
